--- a/Actions/Vue/Demos/组件基础/监听子组件事件 copy.html
+++ b/Actions/Vue/Demos/组件基础/监听子组件事件 copy.html
@@ -15,18 +15,26 @@
                 return {
                     fontsize:1
                 }
-            }
+            },
             template: `
-            <div class="blog-post">
+            <div class="blog-post" :style="{ fontSize: fontsize + 'em' }">
                 <h3>{{post.title}}</h3>
+                <p>{{fontsize}}</p>
                 <div v-html="post.content"></div>
-                <button v-on:click="$emit('enlarge_font',{{fontsize}})">Enlarge font</button>
+                <button v-on:click="enlarge(fontsize)">Enlarge font</button>
             </div>
-            `
+            `,
+            methods:{
+                enlarge:function(font_size){
+                    this.fontsize += 0.1
+                    //alert("hello")
+                    this.$emit('enlarge_font',font_size)
+                }
+            }
         })
     </script>
     <div id="components-demo">
-       <blog-post v-for ="post in posts" :post = "post" :style="{ fontSize: postFontSize + 'em' }" v-on:enlarge_font="postFontSize+=0.1"></blog-post>
+       <blog-post v-for ="post in posts" :post = "post"  v-on:enlarge_font="enlarge"></blog-post>
     </div>
     <script>
         new Vue({
@@ -41,7 +49,10 @@
             },
             methods:{
                 enlarge:function(fontsize){
-                    this.
+                    //this.postFontSize += 0.1
+                    //alert(world)
+                   // alert("world")
+                   // console.log(fontsize)
                 }
             }
         })
